# CVFormatterAgent

./: .env.example  .gitattributes  .gitignore  README.md  agent.py  exceptions.py  main.py  models.py  pyproject.toml  session.py
tests/fixtures/: create_fixtures.py  sample_cv.docx  sample_cv.pdf.txt  sample_cv.txt  sample_job_spec.txt
tools/: analyze_keywords.py  extract_keywords.py  generate_output.py  parse_cv.py  reformat_cv.py
